# voice-agent

./: .env.example  .gitignore  batch_call.py  bot.py  cases.json  cosentus-voice-agent-platform-spec.md  pyproject.toml  run.py  system_prompt.txt
agents/chloe/main/: config.yaml  prompt.txt  tools.py
agents/chris/claim_status/: config.yaml  prompt.txt
agents/chris/eligibility/: config.yaml  prompt.txt
agents/chris/prior_auth/: config.yaml  prompt.txt
agents/cindy/inbound_billing/: config.yaml  prompt.txt
agents/cindy/outbound_balance/: config.yaml  prompt.txt
agents/cindy/outbound_balance_divb/: config.yaml
core/: call_lifecycle.py  call_result.py  call_store.py  config_loader.py  hydrator.py  lambda_client.py  logging.py  pipecat_patches.py  pipeline.py  post_call.py  redaction.py  supabase_client.py  tool_handlers.py  validation.py
data/dummy_cases/: chris_cases.json  cindy_cases.json
docs/: livekit_local_dev.md  livekit_reference.md
docs/lambda-patches/: 2026-04-20-remove-fish-from-tts-validation.patch  2026-04-20-validate-merged-draft-state.patch  README.md  TECH-DEBT.md
migrations/: 001_create_calls_table.sql  002_create_batches_table.sql  003_add_enable_prompt_caching.sql  004_batch_scheduling_and_atomic_counter.sql  README.md
scripts/: daily_spike_findings.md  migrate_post_call_schema.py  seed_agents.py
server/: batch_parse.py  batch_queue.py  batch_runner.py  call_queue_consumer.py  livekit_handler.py  livekit_local_entrypoint.py  main.py  schemas.py  twilio_outbound.py  webrtc_handler.py  ws_handler.py
(+1 files in other folders)
